// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#synthesizeSuggestions different order - IsotypeBarChart 1`] = `
Array [
  Object {
    "comment": "col -> Dim1 (CREATE Dim1)",
    "from": "\\"col\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "animal -> Dim1 (CREATE Dim1)",
    "from": "\\"animal\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "country -> Dim1 (CREATE Dim1)",
    "from": "\\"country\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "codeEffect": [Function],
    "comment": "remove specific data",
    "from": "data url",
    "simpleReplace": false,
    "to": "\\"name\\": \\"myData\\"",
  },
]
`;

exports[`#synthesizeSuggestions different order - IsotypeBarChart 2`] = `
Array [
  Object {
    "comment": "animal -> Dim1 (CREATE Dim1)",
    "from": "\\"animal\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "country -> Dim1 (CREATE Dim1)",
    "from": "\\"country\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "codeEffect": [Function],
    "comment": "remove specific data",
    "from": "data url",
    "simpleReplace": false,
    "to": "\\"name\\": \\"myData\\"",
  },
]
`;

exports[`#synthesizeSuggestions happy path - IsotypeBarChart 1`] = `
Array [
  Object {
    "comment": "col -> Dim1 (CREATE Dim1)",
    "from": "\\"col\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "animal -> Dim1 (CREATE Dim1)",
    "from": "\\"animal\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "country -> Dim1 (CREATE Dim1)",
    "from": "\\"country\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "codeEffect": [Function],
    "comment": "remove specific data",
    "from": "data url",
    "simpleReplace": false,
    "to": "\\"name\\": \\"myData\\"",
  },
]
`;

exports[`#synthesizeSuggestions happy path - IsotypeBarChart 2`] = `
Array [
  Object {
    "comment": "col -> Dim1 (CREATE Dim1)",
    "from": "\\"col\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "animal -> Dim1 (CREATE Dim1)",
    "from": "\\"animal\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "country -> Dim1 (CREATE Dim1)",
    "from": "\\"country\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
]
`;

exports[`#synthesizeSuggestions happy path - IsotypeBarChart 3`] = `
Array [
  Object {
    "comment": "col -> Dim1",
    "from": "\\"col\\"",
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "col -> Dim2 (CREATE Dim2)",
    "from": "\\"col\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim2]\\"",
  },
  Object {
    "comment": "animal -> Dim1",
    "from": "\\"animal\\"",
    "simpleReplace": false,
    "to": "\\"[Dim1]\\"",
  },
  Object {
    "comment": "animal -> Dim2 (CREATE Dim2)",
    "from": "\\"animal\\"",
    "sideEffect": [Function],
    "simpleReplace": false,
    "to": "\\"[Dim2]\\"",
  },
]
`;
